# simplex-chat

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .prettierrc.json  CHANGELOG.md  CLA.md  CNAME  ChatOptions.hs  ChatTerminal.hs  Dockerfile  Dockerfile.build  FORK_README.md  LICENSE  Main.hs  PRIVACY.md  README.md  README_LOCAL.md  SECURITY.md  SimplexMarkdown.hs  Styled.hs  Terminal.hs  Types.hs  agent-protocol.md  analysis_options.yaml  build-android.sh  cabal.project  cabal.project.freeze  changelog_conf.json  direct-sqlite-2.3.26.patch  duplex-messaging.md  edge-messaging-implementation.md  edge-messaging.md  feed.atom  feed.rss  flake.nix  flake.nix~  fourmolu.yaml  graph-chat.md  graph-messaging.md  (+21 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  changelog_conf.json
.well-known/: README.md  assetlinks.json  nostr.json  org.flathub.VerifiedApps.txt
ChatTerminal/: Basic.hs  Core.hs  Editor.hs  POSIX.hs
about/: index.html
app-demo/: main.dart.js
apps/multiplatform/common/src/commonMain/cpp/desktop/: CMakeLists.txt  patch-libapp-mac.sh  simplex-api.c
apps/multiplatform/common/src/commonMain/cpp/desktop/include/: jni.h
apps/multiplatform/common/src/commonMain/cpp/desktop/include/unix/: jni_md.h
apps/multiplatform/common/src/commonMain/cpp/desktop/include/windows/: jni_md.h
apps/multiplatform/common/src/commonMain/cpp/desktop/toolchains/: aarch64-linux-gnu-gcc.cmake  aarch64-mac-apple-darwin-gcc.cmake  x86_64-linux-gnu-gcc.cmake  x86_64-mac-apple-darwin-gcc.cmake  x86_64-windows-mingw32-gcc.cmake
ar/: index.html
assets/: ASSETS_LICENSE.md
bg/: index.html
blog/: 20201022-simplex-chat.html  20201022-simplex-chat.md  20210512-simplex-chat-terminal-ui.html  20210512-simplex-chat-terminal-ui.md  20210914-simplex-chat-v0.4-released.html  20210914-simplex-chat-v0.4-released.md  20211208-simplex-chat-v0.5-released.html  20211208-simplex-chat-v0.5-released.md  20220112-simplex-chat-v1-released.html  20220112-simplex-chat-v1-released.md  20220214-simplex-chat-ios-public-beta.html  20220214-simplex-chat-ios-public-beta.md  20220308-simplex-chat-mobile-apps.html  20220308-simplex-chat-mobile-apps.md  20220404-simplex-chat-instant-notifications.html  20220404-simplex-chat-instant-notifications.md  20220511-simplex-chat-v2-images-files.html  20220511-simplex-chat-v2-images-files.md  20220524-simplex-chat-better-privacy.html  20220524-simplex-chat-better-privacy.md  20220604-simplex-chat-new-privacy-security-features.md  20220604-simplex-chat-new-privacy-security-settings.html  20220604-simplex-chat-new-privacy-security-settings.md  20220711-simplex-chat-v3-released-ios-notifications-audio-video-calls-database-export-import-protocol-improvements.html  20220711-simplex-chat-v3-released-ios-notifications-audio-video-calls-database-export-import-protocol-improvements.md  20220723-simplex-chat-v3.1-tor-groups-efficiency.html  20220723-simplex-chat-v3.1-tor-groups-efficiency.md  20220808-simplex-chat-v3.1-chat-groups.html  20220808-simplex-chat-v3.1-chat-groups.md  20220901-simplex-chat-v3.2-incognito-mode.html  20220901-simplex-chat-v3.2-incognito-mode.md  20220928-simplex-chat-v4-encrypted-database.html  20220928-simplex-chat-v4-encrypted-database.md  20221108-simplex-chat-v4.2-security-audit-new-website.html  20221108-simplex-chat-v4.2-security-audit-new-website.md  20221206-simplex-chat-v4.3-voice-messages.html  20221206-simplex-chat-v4.3-voice-messages.md  20230103-simplex-chat-v4.4-disappearing-messages.html  20230103-simplex-chat-v4.4-disappearing-messages.md  20230204-simplex-chat-v4-5-user-chat-profiles.html  (+79 more)
bots/: README.md
community-vouchers/: index.html
connect-team/: index.html
contact/: index.html
credits/: index.html
cs/: index.html
css/: blog.css  contact.css  demo.css  design3-nav.css  design3.css  doc.css  index.css  prism-dark.min.css  prism-light.min.css  reset.css  style.css  tailwind.css
de/: index.html
definitions/: package.yaml  readme.md  simplex-definitions.cabal  simplex-messaging-api.cabal  stack.yaml
diagrams/: connection.mmd  message.mmd  simplex1.mmd
directory/: index.html
(+4330 files in other folders)
